// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot 1`] = `
<li
  className="MuiButtonBase-root-15 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-12 MuiListItem-button-13 MuiMenuItem-root-3"
  color="inherit"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    className="MuiListItemText-root-18"
  >
    <h3
      className="MuiTypography-root-24 MuiTypography-subheading-31 MuiListItemText-primary-21"
    >
      Shop
    </h3>
  </div>
  <span
    className="MuiTouchRipple-root-48"
  />
</li>
`;

exports[`snapshot with related items 1`] = `
<li
  className="MuiButtonBase-root-15 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-12 MuiListItem-button-13 MuiMenuItem-root-3"
  color="inherit"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={-1}
>
  <div
    className="MuiListItemText-root-18"
  >
    <h3
      className="MuiTypography-root-24 MuiTypography-subheading-31 MuiListItemText-primary-21"
    >
      Shop
    </h3>
  </div>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-56 MuiListItemIcon-root-55"
    color={undefined}
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
    />
  </svg>
  <span
    className="MuiTouchRipple-root-48"
  />
</li>
`;
